# owm_bot

./: .gitignore  README.md  location.example.json  location.json  notebook.ipynb  noxfile.py  pyproject.toml
config/openweathermap/: .secrets.example.toml  settings.toml
src/owm_bot/: main.py
src/owm_bot/controllers/: __init__.py
src/owm_bot/controllers/openweathermap_controller/: __init__.py  __methods.py  _controllers.py
src/owm_bot/core/: __init__.py  config.py  constants.py  paths.py
src/owm_bot/core/depends/: __init__.py  _dependencies.py
src/owm_bot/domain/Common/: __init__.py  schemas.py
src/owm_bot/domain/Location/: __init__.py  schemas.py
src/owm_bot/domain/Weather/: __init__.py
src/owm_bot/domain/Weather/current/: __init__.py  schemas.py
src/owm_bot/domain/Weather/forecast/: __init__.py  schemas.py
src/owm_bot/location/: __init__.py  __methods.py
src/owm_bot/location/controllers/: __init__.py  _controllers.py
src/owm_bot/location/geolocate/: __init__.py  _geolocate.py
src/owm_bot/setup/: __init__.py  __logging.py  __paths.py
src/owm_bot/utils/converters/: __init__.py
src/owm_bot/utils/data_utils/: __init__.py
src/owm_bot/utils/encoders/: __init__.py
src/owm_bot/utils/owm_utils/: __init__.py  __methods.py
src/owm_bot/utils/request_utils/: __init__.py  __methods.py
src/owm_bot/weather/: __init__.py  __methods.py
src/owm_bot/weather/controllers/: __init__.py  _controllers.py
src/owm_bot/weather/current/: __init__.py  _methods.py
src/owm_bot/weather/forecast/: __init__.py  _methods.py
(+6 files in other folders)
