[project]
name = "owm-bot"
version = "0.1.0"
description = "Controllers & methods for interacting with the OpenWeathermap API."
authors = [
    {name = "redjax", email = "none@none.com"},
]
dependencies = [
    "red-utils>=0.2.23",
    "red-logging>=0.1.1",
    "pendulum>=3.0.0",
    "hishel>=0.0.27",
    "httpx>=0.27.0",
    "chardet>=5.2.0",
    "pydantic>=2.7.3",
    "pydantic-settings>=2.3.1",
    "dynaconf>=3.2.5",
    "pandas>=2.2.2",
    "pyarrow>=16.1.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.4.8",
    "nox>=2024.4.15",
    "pytest-xdist>=3.6.1",
]
